# d4lf

./: .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTEXT.md  LICENSE.txt  README.md  build.py  codex.md  environment.yml  pyproject.toml  requirements.txt
.agents/skills/d4lf-cross-file-impact/: SKILL.md
.agents/skills/d4lf-import-paths-packaging/: SKILL.md
.agents/skills/d4lf-importer-browser/: SKILL.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  notify.yml  release.yml
.scratch/rarity-filter/: PRD.md
.scratch/typed-paragon-payload/: PRD.md
assets/: last_update
benchmarks/: imageproc.py
dependencies/: tesserocr-2.7.1-cp313-cp313-win_amd64.whl  tesserocr-2.8.0-cp313-cp313-win_amd64.whl
docs/adr/: 0001-canonical-rarity-filter-key.md  0002-sigil-rarity-derivation.md  0003-sigil-editor-affix-dungeon-kind-split.md
docs/agents/: domain.md
docs/plans/: 2026-03-23-safe-refactor.md
src/: __init__.py  app_runtime.py  autoupdater.py  bootstrap.py  dataloader.py  info_overlay.py  logger.py  loot_mover.py  main.py  overlay.py  paragon_overlay.py  runtime_checks.py  startup_messages.py  template_finder.py  tts.py  unified_window.py
src/config/: __init__.py  data.py  helper.py  loader.py  models.py  profile_document.py  profile_models.py  reload_groups.py  settings_models.py  ui.py
src/gui/: activity_log_widget.py  affixes_tab.py  build_from_yaml.py  collapsible_widget.py  config_tab.py  config_window.py  d4lfitem.py  dialog.py  importer_window.py  main_window.py  profile_editor.py  profile_editor_window.py  profile_tab.py  qt_gui.py  settings_tab.py  settings_window.py  sigils_tab.py  themes.py  tributes_tab.py  unified_window.py  uniques_tab.py
src/gui/models/: dialog.py  (+3 more)
src/item/: filter.py  filter_affixes.py  filter_categories.py  filter_matchers.py  filter_types.py  filter_unique.py  find_descr.py  models.py  sigil_rules.py
src/scripts/: __init__.py  common.py  handler.py  hotkeys.py  info_overlay.py  loot_filter.py  loot_filter_tts.py  runtime_lifecycle.py  vision_mode.py  vision_mode_fast.py  vision_mode_mixed.py  vision_mode_tts.py  vision_mode_with_highlighting.py
src/tools/: gen_data.py  gen_data_helpers.py
src/ui/: inventory_base.py  menu.py  stash.py  vendor.py
src/utils/: custom_mouse.py  global_hotkeys.py  image_operations.py  misc.py  process_handler.py  roi_operations.py  window.py
tests/: bootstrap_test.py  conftest.py  logger_test.py  paragon_overlay_test.py  test_app_runtime.py  test_paragon_overlay_utils.py
tests/config/: helper_test.py  loader_test.py  models_test.py  reload_groups_test.py  test_profile_document.py  test_runtime_optional_imports.py  ui_test.py
tests/gui/: config_tab_test.py  test_importer_window.py
tests/item/: filter_affixes_test.py  filter_matchers_test.py  filter_unique_test.py  read_descr_season5_test.py  read_descr_season6_test.py  read_descr_season6_tts_test.py  read_descr_season8_tts_test.py  read_descr_season_10_tts_test.py  read_descr_season_11_mixed_test.py  read_descr_season_11_tts_test.py  read_descr_season_12_tts_test.py  read_descr_season_13_tts_test.py  read_descr_tts_test.py  test_item_type.py  test_parse_affixes.py  test_parse_aspect.py  test_parse_base_item.py  test_parse_sigil.py  test_sigil_rules.py
tests/scripts/: test_common_imports.py  test_hotkeys.py  test_runtime_lifecycle.py
tests/tools/: gen_data_test.py  test_gen_data.py
tests/utils/: roi_operations_test.py
tts/: install_dll.cmd  sign_dll.ps1
(+96 files in other folders)
