[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
    "pyinstaller",
    "pytest-env",
    "pytest-mock",
    "pytest-pythonpath",
    "pytest-xdist",
    "pytest",
    "typing-extensions",
    "prek>=0.2.22"
]

[project]
dependencies = [
    "beautifultable",
    "colorama",
    "httpx",
    "jsonpath",
    "keyboard",
    "lxml",
    "mouse",
    "mss",
    "natsort",
    "numpy",
    "opencv-python",
    "pillow",
    "psutil",
    "pydantic",
    "pydantic-numpy",
    "pydantic-yaml",
    "pyqt6",
    "python-jsonpath",
    "pytweening",
    "pywin32; sys_platform == 'win32'",
    "pyyaml",
    "rapidfuzz",
    "ruamel-yaml",
    "ruff",
    "selenium",
    "seleniumbase",
    "tk",
    "webdriver-manager"
]
dynamic = ["version"]
name = "d4lf"
requires-python = ">=3.14"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.version]
path = "src/__init__.py"

[tool.ruff]
indent-width = 4
line-length = 140

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
ignore = ["E501"]
select = [
    "A",
    "ASYNC",
    "ASYNC1",
    "B",
    "C4",
    "DTZ",
    "E",
    "EXE",
    "F",
    "FA",
    "I",
    "ICN",
    "INT",
    "LOG",
    "PERF",
    "PT",
    "Q",
    "R",
    "RET",
    "RSE",
    "SIM",
    "SLOT",
    "T10",
    "TCH",
    "TID",
    "UP",
    "W",
    "YTT"
]

[tool.ruff.lint.isort]
split-on-trailing-comma = true
